--- a/env.template
+++ b/env.template
@@ -4,9 +4,15 @@ UVICORN_PORT=8000
 
 # CORS Configuration
 # Add frontend URLs that should be allowed to access the API
-CORS_ALLOW_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://frontend:80
+# For local network access, use * (wildcard) or add your local IP
+CORS_ALLOW_ORIGINS=*
 
 # Environment
 ENVIRONMENT=development
 DEBUG=true
+
+# LLM Configuration
+LLM_PROVIDER=ollama
+LLM_BASE_URL=http://llm:11434
+LLM_MODEL=llama3.1:8b-instruct
 
