--- a/env.template
+++ b/env.template
@@ -1,18 +1,59 @@
+# =============================================================================
+# Web Agent Configuration
+# Architecture: LibreChat -> Backend -> MCP Server
+# =============================================================================
+
+# -----------------------------------------------------------------------------
 # Backend Configuration
+# -----------------------------------------------------------------------------
 UVICORN_HOST=0.0.0.0
 UVICORN_PORT=8000
 
 # CORS Configuration
-# Add frontend URLs that should be allowed to access the API
-# For local network access, use * (wildcard) or add your local IP
+# For production, specify exact origins. For development, use *
 CORS_ALLOW_ORIGINS=*
 
 # Environment
 ENVIRONMENT=development
 DEBUG=true
 
-# LLM Configuration
-LLM_PROVIDER=ollama
-LLM_BASE_URL=http://llm:11434
-LLM_MODEL=llama3.1:8b-instruct
+# -----------------------------------------------------------------------------
+# OpenRouter Configuration (LLM Provider)
+# -----------------------------------------------------------------------------
+# Get your API key from: https://openrouter.ai/keys
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_DEFAULT_MODEL=anthropic/claude-3.5-sonnet
+OPENROUTER_TIMEOUT=120.0
 
+# -----------------------------------------------------------------------------
+# MCP Server Configuration
+# -----------------------------------------------------------------------------
+MCP_SERVER_URL=http://mcp-server:8001
+MCP_SERVER_NAME=Web-Agent-MCP-Server
+MCP_TIMEOUT=60.0
+
+# -----------------------------------------------------------------------------
+# LibreChat Configuration
+# -----------------------------------------------------------------------------
+# Application URL (used for OpenRouter referer)
+APP_URL=http://localhost:3080
+
+# Session Configuration
+SESSION_EXPIRY=900000
+REFRESH_TOKEN_EXPIRY=604800000
+
+# JWT Secrets (CHANGE THESE IN PRODUCTION!)
+JWT_SECRET=your_jwt_secret_change_this_in_production
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_change_this_in_production
+
+# -----------------------------------------------------------------------------
+# Database Configuration
+# -----------------------------------------------------------------------------
+# MongoDB connection string
+MONGO_URI=mongodb://mongodb:27017/LibreChat
+
+# -----------------------------------------------------------------------------
+# Logging
+# -----------------------------------------------------------------------------
+LOG_LEVEL=INFO
