--- a/mcp-server/requirements.txt
+++ b/mcp-server/requirements.txt
@@ -1,6 +1,7 @@
-fastmcp==0.3.0
-pydantic==2.10.3
-httpx==0.27.0
-fastapi==0.115.0
+fastmcp==0.4.0
 uvicorn[standard]==0.30.6
-
+fastapi==0.115.4
+pydantic==2.10.3
+python-dotenv==1.0.1
+requests==2.31.0
+httpx==0.27.0
