--- a/env.template
+++ b/env.template
@@ -1,4 +1,4 @@
-# =============================================================================
+[29.11.2025, 23:20:08] Emin Ersüs: # =============================================================================
 # Web Agent Configuration
 # Architecture: LibreChat -> MCP Server (FastMCP with SSE)
 #               + Backend Middleware (for monitoring and future flow control)
@@ -8,7 +8,7 @@
 # OpenRouter Configuration (LLM Provider)
 # -----------------------------------------------------------------------------
 # Get your API key from: https://openrouter.ai/keys
-OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_API_KEY=
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
 OPENROUTER_DEFAULT_MODEL=anthropic/claude-3.5-sonnet
 OPENROUTER_TIMEOUT=120.0
@@ -25,9 +25,9 @@ REFRESH_TOKEN_EXPIRY=604800000
 
 # JWT Secrets (CHANGE THESE IN PRODUCTION!)
 # Generate secure random strings for these values
-JWT_SECRET=your_jwt_secret_change_this_in_production
-JWT_REFRESH_SECRET=your_jwt_refresh_secret_change_this_in_production
-NEXTAUTH_SECRET=your_nextauth_secret_change_this_in_production
+JWT_SECRET=
+JWT_REFRESH_SECRET=
+NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3080
 
 # Registration Settings
@@ -74,8 +74,8 @@ MONGO_URI=mongodb://mongo:27017/librechat
 #
 # OPTION 2: Automatic Token Refresh (RECOMMENDED)
 # Set both CLIENT_ID and CLIENT_SECRET for automatic token management
-EBAY_CLIENT_ID=your_ebay_client_id_here
-EBAY_CLIENT_SECRET=your_ebay_client_secret_here
+EBAY_CLIENT_ID=example
+EBAY_CLIENT_SECRET=exmaple
 #
 # Sandbox for testing (set to true to use sandbox environment)
 EBAY_USE_SANDBOX=false
@@ -84,3 +84,13 @@ EBAY_USE_SANDBOX=false
 # Logging
 # -----------------------------------------------------------------------------
 LOG_LEVEL=INFO
+
+# Tool Response Logging
+# Set to true to log full tool responses (can be very verbose)
+# Default: false (only logs first 200 characters)
+LOG_FULL_TOOL_RESPONSES=false
+
+# Maximum characters to log for tool responses when LOG_FULL_TOOL_RESPONSES=false
+# Default: 200
+TOOL_RESPONSE_LOG_LIMIT=200
+[29.11.2025, 23:30:24] Tuna Onat: https://www.youtube.com/watch?v=kF8I_r9XT7A
